[package]
name = "close-err"
version = "1.0.2"
edition = "2021"
license = "MIT"
authors = ["Rob Pilling <robpilling@gmail.com>"]
description = "Add .close() to file-like types, for error handling"
documentation = "https://docs.rs/close-err"
homepage = "https://github.com/bobrippling/close-err"
repository = "https://github.com/bobrippling/close-err"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
kernel32-sys = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
